--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <option value="black" value="value1">Black</option>
         <option value="Purple" value="value1">Purple</option>
       </select>
+      <label for="shape">Circle</label>
+      <input id="shape-input" type="checkbox" name="shape" value="circle">
       <label for="size">Size</label>
       <input id="size-input" type="text" name="size" placeholder="20 to 300">
       <button id="create-element" name="submit" type="button">Create</button>
